--- a/index.html
+++ b/index.html
@@ -4,12 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>متجري الإلكتروني</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        header nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        main {
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
+        section {
+            background: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        #auth-page div {
+            display: flex;
+            flex-direction: column;
+            max-width: 400px;
+            margin: auto;
+        }
+        input {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        button {
+            padding: 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.2s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        button:disabled {
+            background-color: #aaa;
+            cursor: not-allowed;
+        }
+        small {
+            margin-top: -8px;
+            margin-bottom: 10px;
+            color: #6c757d;
+            text-align: right;
+        }
+        #username-feedback {
+            font-weight: bold;
+        }
+        #product-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .product-card {
+            border: 1px solid #ddd;
+            padding: 15px;
+            text-align: center;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .cart-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+        }
+        .profile-section {
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
 
     <header>
-        <h1>متجري الإلكتروني</h1>
+        <h1>متجري</h1>
         <nav>
             <a href="#" id="nav-home">الرئيسية</a>
             <a href="#" id="nav-login" style="display: none;">تسجيل الدخول</a>
@@ -22,8 +122,7 @@
     <main>
         <section id="home-page" style="display: none;">
             <h2>منتجاتنا</h2>
-            <div id="product-list">
-                </div>
+            <div id="product-list"></div>
         </section>
 
         <section id="auth-page" style="display: none;">
@@ -74,6 +173,326 @@
         </section>
     </main>
 
-    <script type="module" src="script.js"></script>
+    <script type="module">
+        // 1. استيراد دوال FIREBASE V9
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+        import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
+        import { getFirestore, collection, addDoc, query, where, getDocs, onSnapshot, doc, updateDoc, orderBy, serverTimestamp, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-firestore.js";
+        
+        // 2. إعدادات FIREBASE
+        const firebaseConfig = {
+            apiKey: "AIzaSyCfOzC8gkqkVSNZ3frtnnCMxbeq-v7yaTY",
+            authDomain: "almas-store-a51eb.firebaseapp.com",
+            databaseURL: "https://almas-store-a51eb-default-rtdb.firebaseio.com",
+            projectId: "almas-store-a51eb",
+            storageBucket: "almas-store-a51eb.appspot.com",
+            messagingSenderId: "502522968593",
+            appId: "1:502522968593:web:52dc253f8ea12f4d5bcfb0",
+            measurementId: "G-G0WC9BJ6JW"
+        };
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+
+        // 3. الوصول لعناصر الصفحة (DOM Elements)
+        const pages = {
+            home: document.getElementById('home-page'),
+            auth: document.getElementById('auth-page'),
+            cart: document.getElementById('cart-page'),
+            profile: document.getElementById('profile-page'),
+        };
+        const navLinks = {
+            home: document.getElementById('nav-home'),
+            login: document.getElementById('nav-login'),
+            cart: document.getElementById('nav-cart'),
+            profile: document.getElementById('nav-profile'),
+            logout: document.getElementById('nav-logout'),
+        };
+        const productListDiv = document.getElementById('product-list');
+        const cartItemsDiv = document.getElementById('cart-items');
+        const cartCountSpan = document.getElementById('cart-count');
+        const cartTotalSpan = document.getElementById('cart-total');
+        const userNameDisplay = document.getElementById('user-name-display');
+        const userUsernameDisplay = document.getElementById('user-username-display');
+        const userEmailDisplay = document.getElementById('user-email-display');
+        const orderStatusDiv = document.getElementById('order-status');
+        const orderHistoryUl = document.getElementById('order-history');
+
+        // 4. متغيرات الحالة (State)
+        let productsData = [];
+        let cart = [];
+        let currentUser = null;
+        let userProfile = null;
+
+        // 5. دوال مساعدة
+        function showPage(pageName) {
+            Object.values(pages).forEach(page => page.style.display = 'none');
+            if (pages[pageName]) {
+                pages[pageName].style.display = 'block';
+            }
+        }
+
+        // 6. إدارة حالة تسجيل الدخول (Authentication State)
+        onAuthStateChanged(auth, async (user) => {
+            if (user) {
+                currentUser = user;
+                const userDoc = await getDoc(doc(db, "users", user.uid));
+                if (userDoc.exists()) {
+                    userProfile = userDoc.data();
+                    userNameDisplay.textContent = userProfile.name;
+                    userUsernameDisplay.textContent = `@${userProfile.username}`;
+                    userEmailDisplay.textContent = currentUser.email;
+                }
+
+                navLinks.login.style.display = 'none';
+                navLinks.cart.style.display = 'inline';
+                navLinks.profile.style.display = 'inline';
+                navLinks.logout.style.display = 'inline';
+                loadUserProfile();
+                showPage('home');
+            } else {
+                currentUser = null;
+                userProfile = null;
+                navLinks.login.style.display = 'inline';
+                navLinks.cart.style.display = 'none';
+                navLinks.profile.style.display = 'none';
+                navLinks.logout.style.display = 'none';
+                showPage('home');
+            }
+        });
+
+        // 7. منطق التسجيل الجديد والتحقق (Signup Logic)
+        async function handleSignUp() {
+            const signupBtn = document.getElementById('signup-btn');
+            signupBtn.disabled = true;
+            signupBtn.textContent = 'جار الإنشاء...';
+
+            const name = document.getElementById('signup-name').value.trim();
+            const username = document.getElementById('signup-username').value.trim().toLowerCase();
+            const email = document.getElementById('signup-email').value.trim();
+            const phone = document.getElementById('signup-phone').value.trim();
+            const address = document.getElementById('signup-address').value.trim();
+            const password = document.getElementById('signup-password').value;
+            const usernameFeedback = document.getElementById('username-feedback');
+
+            if (!name || !username || !email || !phone || !address || !password) {
+                alert("الرجاء ملء جميع الحقول.");
+                signupBtn.disabled = false;
+                signupBtn.textContent = 'إنشاء الحساب';
+                return;
+            }
+
+            if (!/^[a-z0-9]+$/.test(username)) {
+                alert("اسم المستخدم يجب أن يحتوي على حروف إنجليزية وأرقام فقط بدون مسافات أو رموز.");
+                signupBtn.disabled = false;
+                signupBtn.textContent = 'إنشاء الحساب';
+                return;
+            }
+
+            if (!/^[a-zA-Z0-9]{8,14}$/.test(password)) {
+                alert("كلمة المرور يجب أن تكون بين 8 و 14 حرف أو رقم بالإنجليزية.");
+                signupBtn.disabled = false;
+                signupBtn.textContent = 'إنشاء الحساب';
+                return;
+            }
+
+            try {
+                const q = query(collection(db, "users"), where("username", "==", username));
+                const querySnapshot = await getDocs(q);
+                if (!querySnapshot.empty) {
+                    usernameFeedback.textContent = "اسم المستخدم هذا محجوز!";
+                    usernameFeedback.style.color = "red";
+                    signupBtn.disabled = false;
+                    signupBtn.textContent = 'إنشاء الحساب';
+                    return;
+                }
+                usernameFeedback.textContent = "";
+
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                const user = userCredential.user;
+
+                await setDoc(doc(db, "users", user.uid), {
+                    name, username, email, phone, address,
+                    createdAt: serverTimestamp()
+                });
+                alert("تم إنشاء حسابك بنجاح!");
+            } catch (error) {
+                if (error.code === 'auth/email-already-in-use') {
+                    alert("هذا البريد الإلكتروني مستخدم بالفعل.");
+                } else {
+                    alert("حدث خطأ أثناء إنشاء الحساب.");
+                }
+                console.error("Signup Error:", error);
+            } finally {
+                signupBtn.disabled = false;
+                signupBtn.textContent = 'إنشاء الحساب';
+            }
+        }
+
+        // 8. منطق إضافة للسلة
+        function addToCart(productSku) {
+            if (!currentUser) {
+                alert("يجب عليك تسجيل الدخول أولاً لإضافة منتجات إلى السلة.");
+                showPage('auth');
+                return;
+            }
+            const product = productsData.find(item => item.sku === productSku);
+            if (product) {
+                cart.push(product);
+                updateCart();
+                alert(`${product.name} تمت إضافته إلى السلة!`);
+            }
+        }
+
+        // 9. ربط الأحداث (Event Listeners)
+        navLinks.home.addEventListener('click', (e) => { e.preventDefault(); showPage('home'); });
+        navLinks.login.addEventListener('click', (e) => { e.preventDefault(); showPage('auth'); });
+        navLinks.cart.addEventListener('click', (e) => { e.preventDefault(); showPage('cart'); });
+        navLinks.profile.addEventListener('click', (e) => { e.preventDefault(); showPage('profile'); });
+        navLinks.logout.addEventListener('click', () => signOut(auth));
+
+        document.getElementById('signup-btn').addEventListener('click', handleSignUp);
+        document.getElementById('login-btn').addEventListener('click', () => {
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
+            signInWithEmailAndPassword(auth, email, password).catch(error => alert("البريد الإلكتروني أو كلمة المرور غير صحيحة."));
+        });
+
+        document.getElementById('show-signup').addEventListener('click', (e) => {
+            e.preventDefault();
+            document.getElementById('login-form').style.display = 'none';
+            document.getElementById('signup-form').style.display = 'block';
+        });
+        document.getElementById('show-login').addEventListener('click', (e) => {
+            e.preventDefault();
+            document.getElementById('login-form').style.display = 'block';
+            document.getElementById('signup-form').style.display = 'none';
+        });
+
+        productListDiv.addEventListener('click', (e) => {
+            if (e.target.classList.contains('add-to-cart-btn')) {
+                const sku = e.target.dataset.sku;
+                addToCart(sku);
+            }
+        });
+
+        document.getElementById('checkout-btn').addEventListener('click', async () => {
+            if (cart.length === 0) return alert('سلتك فارغة!');
+            if (!currentUser) return alert('الرجاء تسجيل الدخول أولاً.');
+
+            const order = {
+                userId: currentUser.uid,
+                userEmail: currentUser.email,
+                userName: userProfile.name,
+                items: cart,
+                total: cart.reduce((sum, item) => sum + parseFloat(item.price), 0),
+                status: 'pending',
+                createdAt: serverTimestamp()
+            };
+            try {
+                const docRef = await addDoc(collection(db, "orders"), order);
+                alert(`تم إرسال طلبك بنجاح!`);
+                cart = [];
+                updateCart();
+                showPage('profile');
+            } catch (error) {
+                alert("حدث خطأ أثناء إرسال الطلب.");
+            }
+        });
+
+        // 10. باقي الدوال
+        async function fetchProducts() {
+            try {
+                const response = await fetch('products.json');
+                productsData = await response.json();
+                renderProducts();
+            } catch (error) {
+                productListDiv.innerHTML = "<p>عفواً، لا يمكن تحميل المنتجات حالياً.</p>";
+            }
+        }
+
+        function renderProducts() {
+            productListDiv.innerHTML = '';
+            productsData.forEach(item => {
+                if (item.name && item.price) {
+                    const productCard = document.createElement('div');
+                    productCard.className = 'product-card';
+                    productCard.innerHTML = `
+                        <h3>${item.name}</h3>
+                        <p>السعر: ${item.price} جنيه</p>
+                        <button class="add-to-cart-btn" data-sku="${item.sku}">أضف إلى السلة</button>
+                    `;
+                    productListDiv.appendChild(productCard);
+                }
+            });
+        }
+
+        function updateCart() {
+            cartItemsDiv.innerHTML = '';
+            let total = 0;
+            if (cart.length === 0) {
+                cartItemsDiv.innerHTML = '<p>سلة المشتريات فارغة.</p>';
+            } else {
+                cart.forEach(item => {
+                    const cartItem = document.createElement('div');
+                    cartItem.className = 'cart-item';
+                    cartItem.innerHTML = `<span>${item.name}</span><span>${item.price} جنيه</span>`;
+                    cartItemsDiv.appendChild(cartItem);
+                    total += parseFloat(item.price);
+                });
+            }
+            cartCountSpan.textContent = cart.length;
+            cartTotalSpan.textContent = total.toFixed(2);
+        }
+        
+        async function loadOrderHistory() {
+            if (!currentUser) return;
+            orderHistoryUl.innerHTML = '<li>جار التحميل...</li>';
+            const q = query(collection(db, "orders"), where("userId", "==", currentUser.uid), orderBy("createdAt", "desc"));
+            const querySnapshot = await getDocs(q);
+            orderHistoryUl.innerHTML = '';
+            if (querySnapshot.empty) {
+                orderHistoryUl.innerHTML = '<li>لا يوجد طلبات سابقة.</li>';
+                return;
+            }
+            querySnapshot.forEach((doc) => {
+                const order = doc.data();
+                const li = document.createElement('li');
+                const orderDate = order.createdAt ? order.createdAt.toDate().toLocaleDateString('ar-EG') : 'غير محدد';
+                li.textContent = `طلب بتاريخ ${orderDate} - الإجمالي: ${order.total} جنيه - الحالة: ${order.status}`;
+                orderHistoryUl.appendChild(li);
+            });
+        }
+
+        function listenForOrderUpdates() {
+            if (!currentUser) return;
+            const q = query(collection(db, "orders"), where("userId", "==", currentUser.uid), where('status', 'in', ['pending', 'preparing']));
+            onSnapshot(q, (snapshot) => {
+                orderStatusDiv.innerHTML = '';
+                if(snapshot.empty){
+                    orderStatusDiv.innerHTML = '<p>لا توجد طلبات حالية قيد التجهيز.</p>';
+                    return;
+                }
+                snapshot.forEach((doc) => {
+                    const order = doc.data();
+                    const notification = document.createElement('div');
+                    notification.innerHTML = `<p>طلبك رقم ${doc.id} حالته الآن: <strong>${order.status}</strong></p>`;
+                    orderStatusDiv.appendChild(notification);
+                });
+            });
+        }
+
+        function loadUserProfile() {
+            if (!currentUser) return;
+            loadOrderHistory();
+            listenForOrderUpdates();
+        }
+
+        // 11. بدء تشغيل التطبيق
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchProducts();
+        });
+    </script>
+
 </body>
 </html>
