--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
             // ==============================================================
             // 👈👈 عدّل هذه البيانات لتطابق حسابك على جيت هب 👈👈
             // ==============================================================
-            const githubUsername = "Your-GitHub-Username"; // 👈 ضع اسم مستخدم جيت هب هنا
-            const repoName = "Your-Repo-Name";       // 👈 ضع اسم المستودع هنا
+            const githubUsername = "masyomas"; // 👈 ضع اسم مستخدم جيت هب هنا
+            const repoName = "almas";       // 👈 ضع اسم المستودع هنا
             const branchName = "main";                  // أو "master"
             // ==============================================================
 
