--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
                         </label>
                         <div id="instapay-qr" class="payment-qr-code">
                             <p>امسح الكود أو اضغط على الرابط للدفع:</p>
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=instapay-link-here">
-                            <a href="instapay-link-here" target="_blank">رابط التحويل</a>
+                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://ipn.eg/S/ahmed79070/instapay/4DCcvb">
+                            <a href="https://ipn.eg/S/ahmed79070/instapay/4DCcvb" target="_blank">رابط التحويل</a>
                         </div>
                     </div>
                     <div class="payment-option">
@@ -510,10 +510,10 @@
                     <button id="place-order-btn" class="checkout-btn">تأكيد الطلب</button>
                     <p id="whatsapp-info" style="display: none; text-align: center; margin-top: 15px;">
                         للمتابعة، يرجى التواصل معنا عبر:
-                        <a href="https://wa.me/201000000000" target="_blank" style="color: #25D366;">
+                        <a href="https://wa.me/20552402912" target="_blank" style="color: #25D366;">
                             <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" width="20" height="20"> واتساب
                         </a> أو
-                        <a href="https://t.me/your-telegram-username" target="_blank" style="color: #0088cc;">
+                        <a href="https://t.me/your-telegram-mahmoudadelsaleh" target="_blank" style="color: #0088cc;">
                             <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" width="20" height="20"> تليجرام
                         </a>
                     </p>
