--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     </div>
                     <div class="payment-option">
                         <label>
-                            <input type="radio" name="payment-method" value="instapay" id="instapay-radio"> انستا باي (InstaPay)
+                            <input type="radio" name="payment-method" value="instapay"> انستا باي (InstaPay)
                         </label>
                         <div id="instapay-qr" class="payment-qr-code">
                             <p>امسح الكود أو اضغط على الرابط للدفع:</p>
@@ -499,7 +499,7 @@
                     </div>
                     <div class="payment-option">
                         <label>
-                            <input type="radio" name="payment-method" value="wallet" id="wallet-radio"> محفظة
+                            <input type="radio" name="payment-method" value="wallet"> محفظة
                         </label>
                         <div id="wallet-qr" class="payment-qr-code">
                             <p>امسح الكود أو اضغط على الرابط للدفع:</p>
