--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
             const card = document.createElement('div');
             card.className = 'product-card';
             
-            //card.innerHTML = `
+            card.innerHTML = `
                 <div class="product-details">
                     <h4>${product.name}</h4>
                     <p><span class="product-sku">الكود:</span> ${product.sku}</p>
