--- a/1.html
+++ b/1.html
@@ -596,15 +596,15 @@
                         <h4>الدفع عبر انستا باي</h4>
                         <p>قم بمسح الكود QR أدناه أو استخدم رقم الهاتف للتحويل:</p>
                         <div class="qr-code">
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://example.com/instapay" alt="QR Code">
+                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://ipn.eg/S/ahmed79070/instapay/4DCcvb" alt="QR Code">
                         </div>
-                        <p>رقم الهاتف: <strong>+1234567890</strong></p>
+                        <p>رقم الهاتف: <strong>+201552402912</strong></p>
                         <p>بعد التحويل، يرجى إرسال إشعار الدفع عبر الواتساب إلى الرقم أعلاه.</p>
                     </div>
                     
                     <div id="ewallet-details" class="payment-details">
                         <h4>الدفع عبر المحافظ الإلكترونية</h4>
-                        <p>يرجى التواصل مع الإدارة على الرقم <strong>+1234567890</strong> عبر الواتساب لإتمام عملية الدفع عبر المحافظ الإلكترونية.</p>
+                        <p>يرجى التواصل مع الإدارة على الرقم <strong>+201552402912</strong> عبر الواتساب لإتمام عملية الدفع عبر المحافظ الإلكترونية.</p>
                         <p>سيقوم ممخدمنا بتزويدك برابط الدفع أو معلومات التحويل اللازمة.</p>
                     </div>
 
