--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>متجري العصري - المتجر</title>
+    <title>Apples Mart</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -548,7 +548,7 @@
 
     <header id="main-header">
         <div class="header-left">
-            <h1>متجري العصري</h1>
+            <h1>Apples Mart</h1>
             <div class="user-info">
                 <span id="user-name">زائر</span>
                 <a href="admin.html" id="admin-link" style="display: none;" title="لوحة التحكم">
@@ -663,14 +663,14 @@
                         <h4>الدفع عبر انستا باي</h4>
                         <p>قم بمسح الكود QR أدناه أو استخدم الرابط المباشر للتحويل:</p>
                         <div class="qr-code">
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://ipn.eg/S/mahmoud79070/instapay/4DCcvb" alt="QR Code">
+                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://ipn.eg/S/muhammadbarghouth/instapay/1JkJOQ" alt="QR Code">
                         </div>
-                        <p style="text-align: center;"><a href="https://ipn.eg/S/mahmoud79070/instapay/4DCcvb" target="_blank">اضغط هنا لرابط دفع انستا باي مباشر</a></p>
-                        <p>بعد التحويل، يرجى إرسال إشعار الدفع عبر واتساب إلى الرقم: <strong>+201552402912</strong></p>
+                        <p style="text-align: center;"><a href="https://ipn.eg/S/muhammadbarghouth/instapay/1JkJOQ" target="_blank">اضغط هنا لرابط دفع انستا باي مباشر</a></p>
+                        <p>بعد التحويل، يرجى إرسال إشعار الدفع عبر واتساب إلى الرقم: <strong>+201093208797</strong></p>
                     </div>
                     <div id="ewallet-details" class="payment-details">
                         <h4>الدفع عبر المحافظ الإلكترونية</h4>
-                        <p>يرجى التواصل مع الإدارة على الرقم <strong>+201552402912</strong> عبر واتساب لإتمام عملية الدفع عبر المحافظ الإلكترونية (فودافون كاش، اتصالات كاش، الخ).</p>
+                        <p>يرجى التواصل مع الإدارة على الرقم <strong>+201093208797</strong> عبر واتساب لإتمام عملية الدفع عبر المحافظ الإلكترونية (فودافون كاش، اتصالات كاش، الخ).</p>
                     </div>
                 </div>
                 <div class="checkout-section">
