--- a/index.html
+++ b/index.html
@@ -547,10 +547,10 @@
 <body>
 
     <header id="main-header">
-        <div class="header-left">
+        <div class="header-center">
             <h1>Apples Mart</h1>
             <div class="user-info">
-                <span id="user-name">زائر</span>
+                <span id="user-name"></span>
                 <a href="admin.html" id="admin-link" style="display: none;" title="لوحة التحكم">
                     <i class="fas fa-cog"></i>
                 </a>
