--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             } else {
                 currentUserId = null;
                 isAdmin = false;
-                getElement('user-name').textContent = 'زائر';
+                getElement('user-name').textContent = ' ';
                 showTab('home-tab');
             }
             updateUIForUserType();
