--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
                 // استخدام البيانات المخزنة إذا كانت حديثة
                 allProducts = JSON.parse(cachedData);
                 processProducts();
-                showToast("تم تحميل المنتجات من الذاكرة المؤقتة");
+                showToast("تم تحميل المنتجات - مرحبا بكم في متجرنا ");
             } else {
                 // تحميل البيانات من الموقع إذا انتهت صلاحية الكاش
                 try {
